--- a/.gitignore
+++ b/.gitignore
@@ -461,3 +461,4 @@ Library/UndoStack.bin
 Logs/shadercompiler-UnityShaderCompiler.exe-0.log
 Temp/FSTimeGet-6c30ffeb62bf4854f8a2f62ab98534fb
 UserSettings/Layouts/default-6000.dwlt
+Library/ShaderCache.db
